2007-10-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/contact-editor/e-contact-editor.c:
	Remove unneeded include.

2007-10-26  Matthew Barnes  <mbarnes@redhat.com>

	* conduit/address-conduit.c (local_record_to_pilot_record):
	Zero out the GnomePilotRecord struct to silence a compiler warning.

2007-10-25  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #489661

	* gui/widgets/gal-view-treeview.c:
	* gui/widgets/gal-view-treeview.h:
	* gui/widgets/gal-view-factory-treeview.c:
	* gui/widgets/gal-view-factory-treeview.h:
	* gui/widgets/e-addressbook-treeview-adapter.c:
	* gui/widgets/e-addressbook-treeview-adapter.h:
	Remove these dead files from SCM.

	* gui/widgets/e-addressbook-view.h:
	* gui/widgets/e-addressbook-view.c:
	* gui/widgets/Makefile.am:
	Remove dead WITH_ADDRESSBOOK_VIEW_TREEVIEW code.

2007-10-23  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/contact-editor/e-contact-editor-address.c:
	* gui/contact-editor/e-contact-editor-fullname.c:
	* gui/contact-editor/e-contact-editor-im.c:
	* gui/contact-editor/e-contact-editor.c: (save_contact),
	(app_delete_event_cb), (e_contact_editor_set_property),
	(e_contact_editor_create_date):
	* gui/contact-list-editor/e-contact-list-model.c:
	(e_contact_list_model_new):
	* gui/merging/eab-contact-merging.c: (mergeit), (response):
	* gui/widgets/e-minicard.c: (e_minicard_event), (add_field),
	(get_email_location), (add_email_field), (remodel),
	(e_minicard_reflow), (e_minicard_compare):
	* gui/widgets/eab-config.c: (eab_config_new):
	* gui/widgets/eab-gui-util.c: (eab_load_error_dialog),
	(file_exists), (save_it), (contact_added_cb),
	(eab_send_to_contact_and_email_num_list):
	* gui/widgets/eab-menu.c: (eab_menu_new):
	* gui/widgets/eab-popup.c: (eab_popup_new):
	* importers/evolution-csv-importer.c: (parseLine),
	(getNextCSVEntry):
	* printing/e-contact-print-style-editor.c:
	* printing/test-contact-print-style-editor.c:
	* printing/test-print.c:
	* util/eab-book-util.c: (eab_get_config_database):
